Fix for bug #13780. Added NULL pointer check to PreferenceChanged()